added posibility for updating avatar from user profile

--- a/BookStorage/Views/User/UserProfileView.cshtml
+++ b/BookStorage/Views/User/UserProfileView.cshtml
@@ -41,7 +41,12 @@
             <div class="ui grid">
                 <div class="five wide column">
                     <div class="ui segment full-height">
-
+                        <input type="file"
+                               id="avatar-filepond"
+                               class="filepond"
+                               name="filepond"
+                               accept="image/png, image/jpeg, image/gif"
+                               hidden/>
                     </div>
                 </div>
                 <div class="eleven wide column">
