fixed error when trying to update avatar with avatar url

--- a/BookStorage/Views/User/UserProfileView.cshtml
+++ b/BookStorage/Views/User/UserProfileView.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @using BookStorage.Extensions
-@model BookStorage.Models.ViewModels.UserViewModel.UserProfileViewModel
+@model BookStorage.Models.ViewModels.UserViewModel.GetUserProfileViewModel
 
 @{
     ViewData["Title"] = $"User Profile";
