added book author avatar displaying

--- a/BookStorage/Views/Book/BookView.cshtml
+++ b/BookStorage/Views/Book/BookView.cshtml
@@ -119,10 +119,10 @@
         <div class="four wide column">
             <div class="ui card">
                 <div class="image">
-                    <img src="/images/avatar/large/kristy.png">
+                    <img src="@Model.AuthorAvatarUrl">
                 </div>
                 <div class="content">
-                    <a class="header">Kristy</a>
+                    <a class="header">@Model.AuthorName</a>
                     <div class="meta">
                         <span class="date">Joined in 2013</span>
                     </div>
