added posibility to buy a book

--- a/BookStorage/Views/Book/Book.cshtml
+++ b/BookStorage/Views/Book/Book.cshtml
@@ -55,6 +55,13 @@
                             </div>
                         </div>
                         <div class="field">
+                            <label>Price</label>
+                            <div class="ui right labeled input">
+                                <label for="price" class="ui label">$</label>
+                                <input type="number" placeholder="Amount" id="price" name="price">
+                            </div>
+                        </div>
+                        <div class="field">
                             <input type="file" 
                                    id="book-file"
                                    class="filepond"
