--- a/BookStorage/Views/Book/BookView.cshtml
+++ b/BookStorage/Views/Book/BookView.cshtml
@@ -18,6 +18,8 @@
 
     List<CommentViewModel> comments = await commentService.GetCommentViewModelsAsync(Model.BookId!.Value);
     List<ChapterViewModel> chapters = await chapterService.GetChapterViewModelsAsync(Model.BookId.Value);
+
+    bool isCurrentUserBookAuthor = await userService.GetUserIdAsync() == Model.AuthorId;
 }
 
 
@@ -46,14 +48,14 @@
                         <div class="ui fluid rounded image">
                             <img src="@Model.CoverUrl" alt="cover" />
                         </div>
-                        @if (Model.Price == null || Model.IsBought)    
+                        @if (isCurrentUserBookAuthor || Model.Price == null || Model.IsBought)    
                         {
                             <a href="/book/@Model.BookId/chapter/@chapters.First().ChapterId/view" 
                                class="ui fluid positive button m-top-15">Read</a>
                         }
-                        @if (Model.Price != null && !Model.IsBought)    
+                        @if (!isCurrentUserBookAuthor && Model.Price != null && !Model.IsBought)
                         {
-                            <a href="/book/@Model.BookId/buy"
+                            <a href="/book/@Model.BookId/checkout"
                                 class="ui fluid blue button m-top-15">Buy $@Model.Price</a>
                         }
                     </div>
